--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 WEATHER_API_KEY=aaca356f4861a4c339fde2e08a1ed00f
-REACT_APP_API_URL='https://api.openweathermap.org/data/2.5'
-REACT_APP_ICON_URL='https://openweathermap.org/img/w'
+REACT_APP_API_URL="https://api.openweathermap.org/data/2.5"
+REACT_APP_ICON_URL="https://openweathermap.org/img/w"
